alteração no texto

--- a/Introdução ao Git e ao Github/extras.html
+++ b/Introdução ao Git e ao Github/extras.html
@@ -31,7 +31,7 @@
         e consegui um estágio em desenvolvimento onde passei ser CLT estou até hoje trabalhando. <br>
         Hoje percebe-se nitidamente que passei a dobrar ou até mais o tempo em que fico conectado, que por sinal, já não era pouco... Uso a internet para tudo hoje em dia, mas 
         principalmente para estudos. Além de focar em projetos, cursos onlines e tutoriais, também costumo ver notícias, podcasts, ouvir músicas, jogar, entre várias outras coisas...
-        A internet toma conta da maior parte do meu dia e se tornou essencial na minha vida.
+        A internet toma conta da maior parte do meu dia e se tornou essencial na minha vida!
     </h4>
 </body>
 </html>
