alteracao no arquivo rede, rename e local das pastas

--- a/introducaoGitGitHub/redes.html
+++ b/introducaoGitGitHub/redes.html
@@ -32,5 +32,11 @@
     <p>Será mostrado algo assim: </p>
     <img src="../imagens/ping.jpg" alt="">
 
+
+    <hr>
+
+    <h2 class="red">Programadores que trabalham com internet costumam usar banco de dados como MySql e servidores web como o Apache. A porta 3306 é usada como padrão no banco de dados MySql
+        e a porta 80 e 443 para Apache.
+    </h2>    
 </body>
 </html>
