Incluindo mais curiosidades

--- a/introducaoGitGitHub/curiosidades.html
+++ b/introducaoGitGitHub/curiosidades.html
@@ -45,6 +45,27 @@
         de uma tecnologia que permitiu encriptar os dados do cartão de crédito. O CD custou 12,48 dólares, mais os custos de envio.
     </span><br>
     <span class="blue">Fonte: </span><a href="https://www.dn.pt/sociedade/sabe-qual-foi-a-primeira-venda-online-4908976.html" target="_blank">DN - Diário de Notícias</a>
+
+    <h3>Qual a origem do nome Bluetooth?</h3>
+    <span>
+        Consta que o nome Bluetooth foi escolhido em homenagem ao rei da Dinamarca e da Noruega Harald Blåtand (Bluetooth é uma versão inglesa para o nome original escandinavo) 
+        que durante seu reinado (no século X) conseguiu unificar tribos dos países escandinavos. A analogia é uma referência à tecnologia que também une protocolos de comunicação 
+        num padrão universal.
+    </span><br>
+    <span class="blue">Fonte: </span><a href="https://www.significados.com.br/bluetooth/" target="_blank">Significados</a>
+
+    <h3>Já viu como eram os sites antigamente? </h3>
+    <span>
+        Caso tenha curiosidade, acesse: <a href="https://archive.org/web/" target="_blank"></a>
+    </span><br>
+    <span class="blue">Fonte: </span><a href="#">Curso de primeiros passos para desenvolvimento WEB.</a>
+    
+    <h3>Além do Brasil, algum país usa boleto bancário? </h3>
+    <span>
+        Com mais de quarenta anos, o boleto é um método de pagamento difundido por todo o território nacional. 
+        Apesar do grande sucesso por aqui, o Brasil é o único país que usa boleto bancário na forma de pagamento.
+    </span><br>
+    <span class="blue">Fonte: </span><a href="https://www.adyen.com/pt_BR/blog/boleto-so-existe-brasil-curiosidades" target="_blank">Adyen.</a>
 </body>
 </html>
 
